--- a/ttl-lang/tools/ttl-cc/CMakeLists.txt
+++ b/ttl-lang/tools/ttl-cc/CMakeLists.txt
@@ -2,4 +2,4 @@ add_executable(ttl-cc ttl-cc.cpp)
 
 llvm_map_components_to_libnames(llvm_libs support core)
 
-target_link_libraries(ttl-cc ttl-parser ttl-ast ${llvm_libs})
+target_link_libraries(ttl-cc ttl-parser ttl-ast ttl-sema ${llvm_libs})
