TTL to Tensor dialect conversion
Signed-off-by: Lukas Sommer <lukas.sommer@codeplay.com>

--- a/mlir/tools/ttl-opt/CMakeLists.txt
+++ b/mlir/tools/ttl-opt/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LIBS
         ${dialect_libs}
         ${conversion_libs}
         MLIROptLib
+        TTLToTensor
         )
 add_llvm_executable(ttl-opt ttl-opt.cpp)
 
