--- a/mlir/tools/ttl-opt/CMakeLists.txt
+++ b/mlir/tools/ttl-opt/CMakeLists.txt
@@ -7,6 +7,7 @@ set(LIBS
         MLIROptLib
         TTLToTensor
         TTLToLinalg
+        TTLToScalar
         )
 add_llvm_executable(ttl-opt ttl-opt.cpp)
 
