Basic compiler driver
Signed-off-by: Lukas Sommer <lukas.sommer@codeplay.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,4 @@ set(TTL_BINARY_DIR ${CMAKE_BINARY_DIR})
 add_subdirectory(mlir)
 add_subdirectory(ttl-lang)
 add_subdirectory(test)
+add_subdirectory(ttlc)
