Bufferization, lowering, translation and linking
Use upstream MLIR passes to lower the various dialects resulting from
the lowering of the TTL dialect to LLVM dialect, including
bufferization.

Translate the LLVM dialect to LLVM IR and turn it into a linked
executable by feeding the LLVM IR into clang.

Significantly enhances the driver to allow starting in specific stages
and stopping at various positions in the compilation flow.

Signed-off-by: Lukas Sommer <lukas.sommer@codeplay.com>

--- a/ttlc/CMakeLists.txt
+++ b/ttlc/CMakeLists.txt
@@ -1,2 +1,8 @@
 set(LLVM_EXE_BINARY_DIR ${LLVM_BUILD_BINARY_DIR}/bin)
+set(LLVM_LIB_BINARY_DIR ${LLVM_BUILD_BINARY_DIR}/lib)
 configure_file(ttlc.py ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ttlc)
+
+add_custom_target(ttlc
+  DEPENDS
+  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ttlc
+)
