WIP: Tiling interface for TTL MatMul
Signed-off-by: Lukas Sommer <lukas.sommer@codeplay.com>

--- a/mlir/tools/ttl-opt/CMakeLists.txt
+++ b/mlir/tools/ttl-opt/CMakeLists.txt
@@ -8,6 +8,8 @@ set(LIBS
         TTLToTensor
         TTLToLinalg
         TTLToScalar
+        TTLPasses
+        MLIRFuncAllExtensions
         )
 add_llvm_executable(ttl-opt ttl-opt.cpp)
 
