Pass to eliminate init loops
Signed-off-by: Lukas Sommer <lukas.sommer@codeplay.com>

--- a/mlir/tools/ttl-opt/CMakeLists.txt
+++ b/mlir/tools/ttl-opt/CMakeLists.txt
@@ -8,6 +8,7 @@ set(LIBS
         TTLToTensor
         TTLToLinalg
         TTLToScalar
+        TTLPasses
         MLIRFuncInlinerExtension
         )
 add_llvm_executable(ttl-opt ttl-opt.cpp)
